// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceInterfaces show Shimmer when status is working 1`] = `
<div
  className="fixed-shimmer"
>
  <StyledShimmerBase
    key="0"
    shimmerElements={
      Array [
        Object {
          "height": 20,
          "type": 1,
        },
      ]
    }
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 10,
      }
    }
  />
  <StyledShimmerBase
    key="1"
    shimmerElements={
      Array [
        Object {
          "height": 20,
          "type": 1,
        },
      ]
    }
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 10,
      }
    }
  />
  <StyledShimmerBase
    key="2"
    shimmerElements={
      Array [
        Object {
          "height": 20,
          "type": 1,
        },
      ]
    }
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 10,
      }
    }
  />
</div>
`;

exports[`components/devices/deviceInterfaces show interface information when status is failed 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceInterfaces.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceProperties.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    deviceInterfaces.headerText
  </h3>
  <Connect(InterfaceNotFoundMessageBox) />
</Fragment>
`;

exports[`components/devices/deviceInterfaces show interface information when status is fetched 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceInterfaces.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceProperties.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    deviceInterfaces.headerText
  </h3>
  <ErrorBoundary
    error="errorBoundary.text"
  >
    <section
      className="pnp-interface-info"
    >
      <StyledLabelBase
        className="source"
      >
         
        deviceInterfaces.columns.source
        : 
        settings.modelDefinitions.repositoryTypes.public.label
      </StyledLabelBase>
      <CustomizedActionButton
        className="configure-button"
        onClick={[Function]}
      >
        deviceInterfaces.command.configure
      </CustomizedActionButton>
      <StyledLabelBase>
         
        deviceInterfaces.columns.displayName
        : 
        --
      </StyledLabelBase>
      <StyledLabelBase>
         
        deviceInterfaces.columns.description
        : 
        --
      </StyledLabelBase>
      <article
        className="interface-definition"
      >
        <div
          className="monaco-editor"
        >
          <React.Suspense
            fallback={
              <StyledSpinnerBase
                size={3}
                title="loading"
              />
            }
          >
            <ContextConsumer>
              <Component />
            </ContextConsumer>
          </React.Suspense>
        </div>
      </article>
    </section>
  </ErrorBoundary>
</Fragment>
`;

exports[`components/devices/deviceInterfaces show interface information when status is fetched 2`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceInterfaces.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceProperties.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    deviceInterfaces.headerText
  </h3>
  <ErrorBoundary
    error="errorBoundary.text"
  >
    <section
      className="pnp-interface-info"
    >
      <StyledLabelBase
        className="source"
      >
         
        deviceInterfaces.columns.source
        : 
        settings.modelDefinitions.repositoryTypes.private.label
      </StyledLabelBase>
      <CustomizedActionButton
        className="configure-button"
        onClick={[Function]}
      >
        deviceInterfaces.command.configure
      </CustomizedActionButton>
      <StyledLabelBase>
         
        deviceInterfaces.columns.displayName
        : 
        --
      </StyledLabelBase>
      <StyledLabelBase>
         
        deviceInterfaces.columns.description
        : 
        --
      </StyledLabelBase>
      <article
        className="interface-definition"
      >
        <div
          className="monaco-editor"
        >
          <React.Suspense
            fallback={
              <StyledSpinnerBase
                size={3}
                title="loading"
              />
            }
          >
            <ContextConsumer>
              <Component />
            </ContextConsumer>
          </React.Suspense>
        </div>
      </article>
    </section>
  </ErrorBoundary>
</Fragment>
`;

exports[`components/devices/deviceInterfaces show interface information when status is fetched 3`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceInterfaces.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceProperties.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    deviceInterfaces.headerText
  </h3>
  <ErrorBoundary
    error="errorBoundary.text"
  >
    <section
      className="pnp-interface-info"
    >
      <StyledLabelBase
        className="source"
      >
         
        deviceInterfaces.columns.source
        : 
        settings.modelDefinitions.repositoryTypes.device.label
      </StyledLabelBase>
      <CustomizedActionButton
        className="configure-button"
        onClick={[Function]}
      >
        deviceInterfaces.command.configure
      </CustomizedActionButton>
      <StyledLabelBase>
         
        deviceInterfaces.columns.displayName
        : 
        --
      </StyledLabelBase>
      <StyledLabelBase>
         
        deviceInterfaces.columns.description
        : 
        --
      </StyledLabelBase>
      <article
        className="interface-definition"
      >
        <div
          className="monaco-editor"
        >
          <React.Suspense
            fallback={
              <StyledSpinnerBase
                size={3}
                title="loading"
              />
            }
          >
            <ContextConsumer>
              <Component />
            </ContextConsumer>
          </React.Suspense>
        </div>
      </article>
    </section>
  </ErrorBoundary>
</Fragment>
`;

exports[`components/devices/deviceInterfaces show interface information when status is fetched 4`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceInterfaces.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceProperties.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    deviceInterfaces.headerText
  </h3>
  <ErrorBoundary
    error="errorBoundary.text"
  >
    <section
      className="pnp-interface-info"
    >
      <StyledLabelBase
        className="source"
      >
         
        deviceInterfaces.columns.source
        : 
        --
      </StyledLabelBase>
      <CustomizedActionButton
        className="configure-button"
        onClick={[Function]}
      >
        deviceInterfaces.command.configure
      </CustomizedActionButton>
      <StyledLabelBase>
         
        deviceInterfaces.columns.displayName
        : 
        --
      </StyledLabelBase>
      <StyledLabelBase>
         
        deviceInterfaces.columns.description
        : 
        --
      </StyledLabelBase>
      <article
        className="interface-definition"
      >
        <div
          className="monaco-editor"
        >
          <React.Suspense
            fallback={
              <StyledSpinnerBase
                size={3}
                title="loading"
              />
            }
          >
            <ContextConsumer>
              <Component />
            </ContextConsumer>
          </React.Suspense>
        </div>
      </article>
    </section>
  </ErrorBoundary>
</Fragment>
`;
